Removed old report data.

--- a/TestPaper/Views/Admin/DashBoard.cshtml
+++ b/TestPaper/Views/Admin/DashBoard.cshtml
@@ -16,6 +16,7 @@
             <div class="panel-body">
                 <div>
                     <img src="~/TempCharts/AdminScoresChart.png" />
+                    <img src="~/TempCharts/AdminSuccessRateChart.png" />
                 </div>
             </div>
             <div id="snackbar"></div>
